# sql-query-analyzer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  action.yml  cliff.toml  codecov.yml  deny.toml
.config/: nextest.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: _audit.yml  _build.yml  _changelog.yml  _clippy.yml  _deny.yml  _detect.yml  _doc.yml  _doctest.yml  _fmt.yml  _machete.yml  _msrv.yml  _pr-size.yml  _publish.yml  _qual.yml  _release-build.yml  _release.yml  _reuse.yml  _semver.yml  _tag.yml  _test.yml  cargo-update.yml  ci.yml  codeql.yml  dependabot-automerge.yml  pages.yml  pr-analysis.yml  publish-version.yml  scorecard.yml  zizmor.yml
.reuse/: dep5
docs/: book.toml
docs/src/: SUMMARY.md  ci.md  cli.md  configuration.md  formats.md  installation.md  introduction.md  llm.md  quick-start.md
docs/src/rules/: index.md  performance.md  schema.md  security.md  style.md
src/: app.rs  cache.rs  cli.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  output.rs  preprocessor.rs  query.rs  rules.rs  schema.rs
src/app/: analyze.rs  convert.rs  helpers.rs  types.rs
src/preprocessor/: clickhouse.rs
src/query/: extract.rs  types.rs
src/query/extract/: expr.rs  mod.rs  set_expr.rs  table.rs
src/rules/: mod.rs  performance.rs  schema_aware.rs  security.rs  style.rs  types.rs
tests/: binary_tests.rs  cache_tests.rs  cli_tests.rs  config_tests.rs  error_tests.rs  output_tests.rs  query_tests.rs  rules_tests.rs  schema_tests.rs  types_tests.rs
