[package]
name = "sql_query_analyzer"
version = "0.4.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Static analysis tool for SQL queries with 20 built-in rules for performance, security, and style"
license = "MIT"
repository = "https://github.com/RAprogramm/sql-query-analyzer"
homepage = "https://github.com/RAprogramm/sql-query-analyzer"
documentation = "https://docs.rs/sql-query-analyzer"
readme = "README.md"
keywords = ["sql", "analyzer", "linter", "performance", "database"]
categories = ["development-tools", "command-line-utilities", "database"]
exclude = [".github", "target", ".git"]
rust-version = "1.90"

[lib]
name = "sql_query_analyzer"
path = "src/lib.rs"

[[bin]]
name = "sql-query-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
masterror = "0.25"
sqlparser = "0.60"
smallvec = { version = "1.15", features = ["serde"] }
indexmap = { version = "2.12", features = ["serde"] }
colored = "3"
indicatif = "0.18"
compact_str = { version = "0.9", features = ["serde"] }
rayon = "1.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
