[package]
name = "sql_query_analyzer"
version = "0.10.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Static analysis tool for SQL queries with 29 built-in rules for performance, security, and style"
license = "MIT"
repository = "https://github.com/RAprogramm/sql-query-analyzer"
homepage = "https://github.com/RAprogramm/sql-query-analyzer"
documentation = "https://docs.rs/sql-query-analyzer"
readme = "README.md"
keywords = ["sql", "analyzer", "linter", "performance", "database"]
categories = ["development-tools", "command-line-utilities", "database"]
exclude = [".github", "target", ".git"]
rust-version = "1.97"

[lib]
name = "sql_query_analyzer"
path = "src/lib.rs"

[[bin]]
name = "sql-query-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"
masterror = "0.29"
sqlparser = "0.62"
smallvec = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
colored = "3"
indicatif = "0.18"
compact_str = { version = "0.10", features = ["serde"] }
rayon = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
